--- a/Barcelona_EDA.ipynb
+++ b/Barcelona_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1400,7 +1400,7 @@
        "[14004 rows x 15 columns]"
       ]
      },
-     "execution_count": 589,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -1461,7 +1461,7 @@
        "        10.])"
       ]
      },
-     "execution_count": 591,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -1485,7 +1485,7 @@
        "       u'Sarria-Sant Gervasi', u'Les Corts'], dtype=object)"
       ]
      },
-     "execution_count": 592,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1629,7 +1629,7 @@
        "4522       0.0        1.0"
       ]
      },
-     "execution_count": 598,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1750,7 +1750,7 @@
        "1      3.0  41.380967   2.168394  2015-11-06 04:24:20.079460  "
       ]
      },
-     "execution_count": 601,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1854,7 +1854,7 @@
        "1  41.380967   2.168394  2015-11-06 04:24:20.079460  "
       ]
      },
-     "execution_count": 603,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1865,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1876,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -1884,6 +1884,113 @@
    "source": [
     "# Imputation for Bathrooms\n",
     "barcelona.bathrooms.fillna(method='bfill',inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#barcelona.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "barcelona['overall_satisfaction'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#barcelona['reviews'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2559\n",
+       "1      97\n",
+       "2      16\n",
+       "3       2\n",
+       "6       1\n",
+       "Name: reviews, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# maximum number of reviews for a place where satisfaction level is null is 6(very small), we impute the \n",
+    "# satisfaction level with a score of 2.\n",
+    "barcelona['reviews'][barcelona['overall_satisfaction'].isnull()].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Imputation for overall satisfaction\n",
+    "barcelona.overall_satisfaction.fillna(value =2. ,inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#barcelona.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "barcelona.to_csv(path_or_buf='/Users/jyots/Desktop/DS_Projects/airbnb_datasets/Barcelona_Clean.csv')"
    ]
   },
   {
