--- a/Berlin_EDA.ipynb
+++ b/Berlin_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +132,7 @@
        "41"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +166,7 @@
        "Name: bathrooms, dtype: int64"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +300,7 @@
        "6359       0.0        1.0"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -428,7 +428,7 @@
        "1  2015-12-01 01:03:36.324474  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -535,7 +535,7 @@
        "1      3.0  52.496957  13.434735  2015-12-01 01:03:36.324474  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14797 entries, 0 to 14796\n",
+      "Data columns (total 15 columns):\n",
+      "level_0                 14797 non-null int64\n",
+      "room_id                 14797 non-null int64\n",
+      "host_id                 14796 non-null float64\n",
+      "room_type               14797 non-null object\n",
+      "neighborhood            14797 non-null object\n",
+      "reviews                 14797 non-null int64\n",
+      "overall_satisfaction    11740 non-null float64\n",
+      "accommodates            13596 non-null float64\n",
+      "bedrooms                14797 non-null float64\n",
+      "bathrooms               13691 non-null float64\n",
+      "price                   14797 non-null float64\n",
+      "minstay                 14372 non-null float64\n",
+      "latitude                14797 non-null float64\n",
+      "longitude               14797 non-null float64\n",
+      "collected               14797 non-null object\n",
+      "dtypes: float64(9), int64(3), object(3)\n",
+      "memory usage: 1.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "berlin.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -557,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -565,6 +603,17 @@
    "source": [
     "# Imputation for Bathrooms\n",
     "berlin.bathrooms.fillna(method='bfill',inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#berlin.info()"
    ]
   },
   {
@@ -580,13 +629,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3057"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "berlin['overall_satisfaction'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2883\n",
+       "1     152\n",
+       "2      19\n",
+       "3       2\n",
+       "4       1\n",
+       "Name: reviews, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# maximum number of reviews for a place where satisfaction level is null is 6(very small), we impute the \n",
+    "# satisfaction level with a score of 2.\n",
+    "berlin['reviews'][berlin['overall_satisfaction'].isnull()].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#paris"
+    "# Imputation for overall satisfaction\n",
+    "berlin.overall_satisfaction.fillna(value =2. ,inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14797 entries, 0 to 14796\n",
+      "Data columns (total 15 columns):\n",
+      "level_0                 14797 non-null int64\n",
+      "room_id                 14797 non-null int64\n",
+      "host_id                 14796 non-null float64\n",
+      "room_type               14797 non-null object\n",
+      "neighborhood            14797 non-null object\n",
+      "reviews                 14797 non-null int64\n",
+      "overall_satisfaction    14797 non-null float64\n",
+      "accommodates            13596 non-null float64\n",
+      "bedrooms                14797 non-null float64\n",
+      "bathrooms               14797 non-null float64\n",
+      "price                   14797 non-null float64\n",
+      "minstay                 14372 non-null float64\n",
+      "latitude                14797 non-null float64\n",
+      "longitude               14797 non-null float64\n",
+      "collected               14797 non-null object\n",
+      "dtypes: float64(9), int64(3), object(3)\n",
+      "memory usage: 1.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "berlin.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "berlin.to_csv(path_or_buf='/Users/jyots/Desktop/DS_Projects/airbnb_datasets/Berlin_Clean.csv')"
    ]
   },
   {
