--- a/Copenhagen_EDA.ipynb
+++ b/Copenhagen_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +145,7 @@
        "17"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +179,7 @@
        "Name: bathrooms, dtype: int64"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -313,7 +313,7 @@
        "7930       0.0        1.0"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -437,7 +437,7 @@
        "1        1.0   62.0      1.0  55.671845  12.487983  2016-06-04 08:30:38.003941  "
       ]
      },
-     "execution_count": 166,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -544,7 +544,7 @@
        "1  55.671845  12.487983  2016-06-04 08:30:38.003941  "
       ]
      },
-     "execution_count": 168,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -596,6 +596,81 @@
    "outputs": [],
    "source": [
     "#cop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6580"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cop['overall_satisfaction'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3664\n",
+       "1    1686\n",
+       "2    1221\n",
+       "3       4\n",
+       "5       3\n",
+       "4       2\n",
+       "Name: reviews, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# maximum number of reviews for a place where satisfaction level is null is 6(very small), we impute the \n",
+    "# satisfaction level with a score of 2.\n",
+    "cop['reviews'][cop['overall_satisfaction'].isnull()].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Imputation for overall satisfaction\n",
+    "cop.overall_satisfaction.fillna(value =2. ,inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cop.to_csv(path_or_buf='/Users/jyots/Desktop/DS_Projects/airbnb_datasets/Copenhagen_Clean.csv')"
    ]
   },
   {
