no major change

--- a/Underpriced_Properties_PerNeighborhood.ipynb
+++ b/Underpriced_Properties_PerNeighborhood.ipynb
@@ -109,8 +109,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>741</th>\n",
-       "      <td>-74.979821</td>\n",
+       "      <th>694</th>\n",
+       "      <td>-76.732222</td>\n",
        "      <td>48.886190</td>\n",
        "      <td>2.385672</td>\n",
        "      <td>6737362</td>\n",
@@ -121,8 +121,8 @@
        "      <td>Amerique</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1391</th>\n",
-       "      <td>-59.480424</td>\n",
+       "      <th>1300</th>\n",
+       "      <td>-61.107408</td>\n",
        "      <td>48.875962</td>\n",
        "      <td>2.392283</td>\n",
        "      <td>532166</td>\n",
@@ -133,8 +133,8 @@
        "      <td>Amerique</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2835</th>\n",
-       "      <td>-44.378908</td>\n",
+       "      <th>2533</th>\n",
+       "      <td>-47.028573</td>\n",
        "      <td>48.886482</td>\n",
        "      <td>2.388402</td>\n",
        "      <td>2589913</td>\n",
@@ -150,14 +150,14 @@
       ],
       "text/plain": [
        "      residuals   latitude  longitude  room_id  bedrooms  bathrooms  \\\n",
-       "741  -74.979821  48.886190   2.385672  6737362       3.0        1.0   \n",
-       "1391 -59.480424  48.875962   2.392283   532166       3.0        1.0   \n",
-       "2835 -44.378908  48.886482   2.388402  2589913       3.0        1.0   \n",
+       "694  -76.732222  48.886190   2.385672  6737362       3.0        1.0   \n",
+       "1300 -61.107408  48.875962   2.392283   532166       3.0        1.0   \n",
+       "2533 -47.028573  48.886482   2.388402  2589913       3.0        1.0   \n",
        "\n",
        "            room_type  price neighborhood  \n",
-       "741   Entire home/apt   67.0     Amerique  \n",
-       "1391  Entire home/apt   79.0     Amerique  \n",
-       "2835  Entire home/apt  101.0     Amerique  "
+       "694   Entire home/apt   67.0     Amerique  \n",
+       "1300  Entire home/apt   79.0     Amerique  \n",
+       "2533  Entire home/apt  101.0     Amerique  "
       ]
      },
      "execution_count": 5,
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -223,64 +223,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>-127.153028</td>\n",
-       "      <td>55.683053</td>\n",
-       "      <td>12.564427</td>\n",
-       "      <td>7177323</td>\n",
+       "      <th>34</th>\n",
+       "      <td>-119.048428</td>\n",
+       "      <td>41.915750</td>\n",
+       "      <td>12.454097</td>\n",
+       "      <td>7509794</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>Municipio 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>-105.640119</td>\n",
+       "      <td>41.908474</td>\n",
+       "      <td>12.450097</td>\n",
+       "      <td>4413081</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>Municipio 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>-95.640119</td>\n",
+       "      <td>41.895791</td>\n",
+       "      <td>12.493713</td>\n",
+       "      <td>663834</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Entire home/apt</td>\n",
        "      <td>78.0</td>\n",
-       "      <td>Indre By</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>-113.029196</td>\n",
-       "      <td>55.686896</td>\n",
-       "      <td>12.614720</td>\n",
-       "      <td>11716067</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>Indre By</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>-109.276778</td>\n",
-       "      <td>55.692836</td>\n",
-       "      <td>12.577370</td>\n",
-       "      <td>315836</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>Indre By</td>\n",
+       "      <td>Municipio 1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     residuals   latitude  longitude   room_id  bedrooms  bathrooms  \\\n",
-       "17 -127.153028  55.683053  12.564427   7177323       3.0        1.0   \n",
-       "28 -113.029196  55.686896  12.614720  11716067       3.0        1.0   \n",
-       "32 -109.276778  55.692836  12.577370    315836       3.0        1.0   \n",
+       "     residuals   latitude  longitude  room_id  bedrooms  bathrooms  \\\n",
+       "34 -119.048428  41.915750  12.454097  7509794       3.0        1.0   \n",
+       "49 -105.640119  41.908474  12.450097  4413081       3.0        1.0   \n",
+       "69  -95.640119  41.895791  12.493713   663834       3.0        1.0   \n",
        "\n",
        "          room_type  price neighborhood  \n",
-       "17  Entire home/apt   78.0     Indre By  \n",
-       "28  Entire home/apt   92.0     Indre By  \n",
-       "32  Entire home/apt   82.0     Indre By  "
+       "34  Entire home/apt   52.0  Municipio 1  \n",
+       "49  Entire home/apt   68.0  Municipio 1  \n",
+       "69  Entire home/apt   78.0  Municipio 1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city = copenhagen\n",
+    "city = rome\n",
     "city = preprocess(city)\n",
     "out_alln = top_undp_prop_alln(3,1,'Entire home/apt',city)\n",
     "out_alln\n"
