added code to increase output window size

--- a/Airbnb_Data_Munging_Barcelona.ipynb
+++ b/Airbnb_Data_Munging_Barcelona.ipynb
@@ -2,6 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.OutputArea.auto_scroll_threshold = 9999;"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.auto_scroll_threshold = 9999;"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
@@ -4819,7 +4844,8 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
