added code to increase output window size

--- a/Airbnb_Data_Munging_Copenhagen.ipynb
+++ b/Airbnb_Data_Munging_Copenhagen.ipynb
@@ -4,6 +4,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.OutputArea.auto_scroll_threshold = 9999;"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.auto_scroll_threshold = 9999;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -3041,7 +3066,7 @@
    "execution_count": 79,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
