--- a/Technical Report.ipynb
+++ b/Technical Report.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Airbnb Hosts and Guests Assistant\n",
+    "## Airbnb Host and Guest Assistant\n",
+    "\n",
     "\n",
     "### Property Price Predictor for Airbnb HOSTS and Undervalued Property recommender for Airbnb GUESTS\n",
     "\n",
@@ -77,10 +78,14 @@
    "source": [
     "### Exploratory Data Analysis\n",
     "\n",
-    "The same methods with minor tweaks were applied across all 5 cities.\n",
+    "\n",
+    "The same methods with minor tweaks were applied across all 5 cities. In this report, I am providing the code for the city of Rome since the same pipeline was used for other cities.\n",
+    "\n",
+    "The code file for Rome is [here](https://github.com/Jyojha/DS_Projects/blob/master/Rome_EDA_For_TechnicalReport.ipynb)\n",
     "\n",
     "\n",
-    "The following steps were taken during EDA:\n",
+    "\n",
+    "#### The following steps were taken during EDA:\n",
     "\n",
     "- Rows where cells in the 'room_type' column were null were removed. \n",
     "\n",
@@ -124,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plots from EDA for Rome\n",
+    "### EDA Plots for Rome\n",
     "\n",
     "I used the plots for the city of Rome to show the variations in different features. The trends were similar for each feature across different cities, hence the set of plots below represent the feature changes for Rome and other cities used in this project."
    ]
@@ -255,6 +260,9 @@
    "source": [
     "### Feature Engineering\n",
     "\n",
+    "The code file for Rome is [here](https://github.com/Jyojha/DS_Projects/blob/master/Rome_Feature_Engineering_For_Technical_Report.ipynb)\n",
+    "\n",
+    "\n",
     "Since the number of features that could be used for modeling was 7, I decided to create new features. I began with asking the question \"What factors does an average tourist look for while booking a place on vacation?\" According to Lonely Planet and Tripadvisor, they were:\n",
     "\n",
     "- easy access to public transportation\n",
@@ -367,7 +375,10 @@
     "\n",
     "#### Linear Regression with ElasticNet \n",
     "\n",
-    "- Since I am predicting the price per night in a neighborhood within a city, I decided to use Linear Regression with Regularization. The above heatmap indicates there is not so strong correlation between the predictors. Also, the target variable shows somewhat strong correlation with 'bedrooms' and 'bathrooms'. I wanted to see the effect of the categorical features on the price as well.\n",
+    "The code file for Rome is [here](https://github.com/Jyojha/DS_Projects/blob/master/Rome_RegularizedRegressionModel-Technical_Report.ipynb)\n",
+    "\n",
+    "\n",
+    "- I am predicting the price per night in a neighborhood within a city. Since the price distribution follows the power law, I transformed the variable to its log form to obtain normal distribution on price as regression works better on symmetrical and normally distributed data. The above heatmap indicates there is not so strong correlation between the predictors. Also, the target variable shows somewhat strong correlation with 'bedrooms' and 'bathrooms'. I wanted to see the effect of the categorical features on the price as well.\n",
     "\n",
     "\n",
     "- I used ElasticNet for regularization as it captures the effects of both ridge and lasso methods for penalizing the feature coefficients. \n",
@@ -376,17 +387,76 @@
     "- To test the model on unknown data, the data was split to training and test data. 70% used for training the model. Perfromed Parametric Search with ElasticNet Cross Validation to get the optimized value for 'l1' and 'alpha' for best case R2 score. \n",
     "\n",
     "\n",
-    "- For better fit, converted the target variable, in this case, price per night, to its log value for modeling using numpy.\n",
+    "- For better fit, I converted the target variable, in this case, price per night, to its log value for modeling using numpy.\n",
     "\n",
     "\n",
-    "- The R2 score for each city ranged between 0.45 - 0.58 on the test data. \n",
+    "- The R2 score for each city ranged between 0.49 - 0.62 on the test data. \n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Features with High Positive Co-efficients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Plots/rome_pos_f.png\" width=\"600\" height=\"600\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Features with High Negative Co-efficients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Plots/rome_neg_f.png\" width=\"600\" height=\"600\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Random Forest Model\n",
+    "\n",
+    "The code file for Rome is [here](https://github.com/Jyojha/DS_Projects/blob/master/Rome_RandomForest-For-Technical_report.ipynb)\n",
+    "\n",
+    "\n",
     "\n",
     "- I decided to use the non-parametric modeling method \"Random Forest\" with the purpose of improving the R2 score. Since Random Forest algorithm averages out the variance across multiple estimators, it accounts for non-linearities in the predictors. Thus it could give improved R2 score for the model. This model would explain the variability in the new dataset to a larger degree.\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Features Importance from Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Plots/rome_fi_rf.png\" width=\"800\" height=\"600\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The top 5 important features based on the regression co-efficients, obtained from ElasticNet Regression and Random Forest Regression, are pretty similar. This indicates that none of the predictor variables have non-linear relation with the target variable and that our regression model holds."
    ]
   },
   {
@@ -472,6 +542,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Standardized Residual Vs Standardized Predicted Value for Each City on Price on Test Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Plots/rome_resd_pred.png\" width=\"500\" height=\"500\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Plots/paris_resd_pred.png\" width=\"500\" height=\"500\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Plots/cop_resd_pred.png\" width=\"500\" height=\"500\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Plots/berlin_resd_pred.png\" width=\"500\" height=\"500\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Plots/bc_resd_pred.png\" width=\"500\" height=\"500\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plots above are pretty symmetrically distributed, tending to cluster towards the middle of the plot and none of them show any clear pattern. This strongly indicates that the model for each city is decently accurate and can be a good predictor for price per night in that city.\n",
+    "\n",
+    "Reference: http://docs.statwing.com/interpreting-residual-plots-to-improve-your-regression/#x-unbalanced-header"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Residual Plots for Each City on Price"
    ]
   },
@@ -479,35 +600,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Plots/rome_residual.png\" width=\"600\" height=\"600\" />\n"
+    "<img src=\"./Plots/rome_residual.png\" width=\"500\" height=\"500\" />\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Plots/paris_residual.png\" width=\"600\" height=\"600\" />\n"
+    "<img src=\"./Plots/paris_residual.png\" width=\"500\" height=\"500\" />\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Plots/cop_residual.png\" width=\"600\" height=\"600\" />\n"
+    "<img src=\"./Plots/cop_residual.png\" width=\"500\" height=\"500\" />\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Plots/berlin_residual.png\" width=\"600\" height=\"600\" />\n"
+    "<img src=\"./Plots/berlin_residual.png\" width=\"500\" height=\"500\" />\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Plots/bc_residual.png\" width=\"600\" height=\"600\" />\n"
+    "<img src=\"./Plots/bc_residual.png\" width=\"500\" height=\"500\" />\n"
    ]
   },
   {
@@ -516,7 +637,8 @@
    "source": [
     "Residual = true_price - predicted_price\n",
     "\n",
-    "From the above residual plot for each city on the test data, we observe that each plot follows the classic bell curve indicating that the residuals are normally distributed. We see that most of the residuals are centered around 0. This indicates that most of the predictions fall on the true price value with tail on either side.\n",
+    "From the above residual plot for each city on the test data, we observe that each plot follows the classic bell curve indicating that the residuals are almost normally distributed.This indicates that our model is decent and has room for improvement.\n",
+    "We see that more than 50% of the residuals are centered around 0. This indicates that most of the predictions fall on the true price value with tail on either side.\n",
     "I believe that with larger dataset to train, we will be able to get rid of these side tails and make the plots tighter around zero."
    ]
   },
@@ -524,7 +646,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Created an interactive Jupyter Notebook using ipywidgets to predict price with user input. The link to the notebook is here."
+    "#### Created an interactive Jupyter Notebook using ipywidgets to predict price with user input. The link to the notebook is here.\n",
+    "\n",
+    "The code file is [here](https://github.com/Jyojha/DS_Projects/blob/master/Underpriced_Properties_PerNeighborhood.ipynb)\n",
+    "\n"
    ]
   },
   {
@@ -533,10 +658,13 @@
    "source": [
     "### Add-On\n",
     "\n",
+    "The code file is [here](https://github.com/Jyojha/DS_Projects/blob/master/Interactive_PricePredictor.ipynb)\n",
+    "\n",
+    "\n",
     "- I used the Elastic Net Regularized model on the entire dataset for each city to get the price per night.\n",
     "\n",
     "\n",
-    "- Calculated the residual price from previous step and used the residual values to pull out the \"underpriced properties\" (according to the model above) in a specific neighborhood within a city. The underpriced properties were the ones where the predicted value is higher than the true value.\n",
+    "- Then I Calculated the residual price from previous step and used the residual values to pull out the \"underpriced properties\" (according to the model above) in a specific neighborhood within a city. The underpriced properties were the ones where the predicted value is higher than the true value.\n",
     "\n",
     "\n",
     "\n"
@@ -553,7 +681,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Created a web interface where user can input the city, neighborhood, bedrooms, bathrooms, room_type to get the \"Price Per Night\" and also the price for underpriced properties."
+    "Created a web interface where user can input the city, neighborhood, bedrooms, bathrooms, room_type to get the \"Price Per Night\" and also the price for underpriced properties."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Plots/web_form.png\" width=\"800\" height=\"800\" />\n"
    ]
   },
   {
@@ -567,15 +702,6 @@
     "\n",
     "- Add other cities like London, New York City, Los Angeles, Tokyo, Sydney etc. to compare the price in each city and also to come up with factors that make each of them unique."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
