added labels to plots

--- a/Barcelona_Model.ipynb
+++ b/Barcelona_Model.ipynb
@@ -1019,7 +1019,7 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(8,8))\n",
     "\n",
-    "sns.barplot(y = lasso_coef.loc[0:15,:].variable, x = lasso_coef.loc[0:15,:].abscoef, data=lasso_coef.loc[0:15,:],\n",
+    "sns.barplot(y = enet_coef.loc[0:15,:].variable, x = lasso_coef.loc[0:15,:].abscoef, data=lasso_coef.loc[0:15,:],\n",
     "            ax=ax\n",
     "           )\n",
     "\n",
