--- a/Interactive_PricePredictor.ipynb
+++ b/Interactive_PricePredictor.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -173,18 +173,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rome Municipio 1 0.0 1.0 Entire home/apt\n"
+      "Paris Arsenal 4.0 2.0 Entire home/apt\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Jyots/anaconda/envs/dsi/lib/python2.7/site-packages/pandas/core/indexing.py:132: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self._setitem_with_indexer(indexer, value)\n",
       "/Users/Jyots/anaconda/envs/dsi/lib/python2.7/site-packages/ipykernel/__main__.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
@@ -228,20 +223,7 @@
       "/Users/Jyots/anaconda/envs/dsi/lib/python2.7/site-packages/ipykernel/__main__.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "104.337881559\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "/Users/Jyots/anaconda/envs/dsi/lib/python2.7/site-packages/ipykernel/__main__.py:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
@@ -254,6 +236,13 @@
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "335.92820748\n"
      ]
     }
    ],
@@ -273,7 +262,7 @@
     "             room_type = [rt for rt in city.room_type.unique().tolist() if rt != 'Shared room' ])\n",
     "    \n",
     "    \n",
-    "do_interact(\"Rome\")"
+    "do_interact(\"Paris\")"
    ]
   },
   {
@@ -307,7 +296,7 @@
   },
   "widgets": {
    "state": {
-    "11c08ad7a9c94681b977864d453168b3": {
+    "c2c309006f9d4e1886dc6ff4768abd34": {
      "views": [
       {
        "cell_index": 7
